--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.9"
+    "jwt-redis": "^5.0.6",
+    "mongoose": "^5.6.9",
+    "redis": "^2.8.0",
+    "swagger-ui-express": "^4.0.7"
   }
 }
