--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,17 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://0.0.0.0:8080",
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "reactn": "^2.2.1",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
