--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "bucketlist",
+  "name": "bucketlistify",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && yarn && yarn run build"
+  },
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -10,9 +15,11 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
-    "jwt-redis": "^5.0.6",
     "mongoose": "^5.6.9",
-    "redis": "^2.8.0",
     "swagger-ui-express": "^4.0.7"
+  },
+  "engines": {
+    "yarn": "1.16.0",
+    "node": "10.15.1"
   }
 }
